--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,38 @@
+@font-face {
+    font-family: 'onePiece' ;
+    src: url('../fonts/onepiecefont.ttf');
+  }
+
+body{
+    background-color: black;
+}
 .container{
+    height: 100vw;
+}
+.cardContainer{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap:wrap;
 }
+.card{
+    padding: 5px;
+}
 
-.card {
-    width: ;
+.points{
+    font-family: 'onePiece';
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    color: white;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+background-color: rgba(0, 0, 0, 0.418);}
+
+.clicks{
+    display: flex;
+    align-items: center;
+    color: white;
+    justify-content: center;
 }
